Project

General

Profile

Actions

Bug #20978

closed

rgw opslog can not record operation name

Added by Jiaying Ren over 6 years ago. Updated about 4 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
nautilus
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

rgw: fix opslog operation field

According to Amazon s31, current Operation field are using
http method, which should be operation name.

current rgw opslog:

root@ceph-node1# (git::uri-fixme-cleanup) CEPH_NUM_MON=1 CEPH_NUM_OSD=1 CEPH_NUM_MDS=0 CEPH_NUM_MGR=0 CEPH_NUM_RGW=1 ../src/mstart.sh jiaying -n -X -l

{
"bucket": "111",
"time": "2017-08-10 06:38:07.054639Z",
"time_local": "2017-08-10 14:38:07.054639",
"remote_addr": "",
"user": "anonymous",
"operation": "GET",
"uri": "/111/666666666666666666666",
"http_status": "403",
"error_code": "AccessDenied",
"bytes_sent": 213,
"bytes_received": 0,
"object_size": 0,
"total_time": 2159621,
"user_agent": "curl/7.29.0",
"referrer": ""
}

Related issues 1 (0 open1 closed)

Copied to rgw - Backport #43789: nautilus: rgw opslog can not record operation nameResolvedNathan CutlerActions
Actions #1

Updated by Jiaying Ren over 6 years ago

Fixed:

root@ceph-node1# (git::fix-full-uri) curl -v -X GET 'http://localhost:8000/111/666666666666666666666?id=3'

root@ceph-node1# (git::fix-full-uri) ./bin/radosgw-admin -c ceph.conf log show --object=2017-08-11-10-cf2f1a45-a24b-4ad6-8358-f9e0dea75d67.4106.1-111 {
"bucket": "111",
"time": "2017-08-11 02:59:47.684908Z",
"time_local": "2017-08-11 10:59:47.684908",
"remote_addr": "",
"user": "anonymous",
"operation": "get_obj",
"uri": "GET /111/666666666666666666666?id=3 HTTP/1.1",
"http_status": "403",
"error_code": "AccessDenied",
"bytes_sent": 213,
"bytes_received": 0,
"object_size": 0,
"total_time": 1571285,
"user_agent": "curl/7.29.0",
"referrer": ""
}
],

https://github.com/ceph/ceph/pull/16984
https://github.com/ceph/ceph/pull/30539

Actions #2

Updated by Jos Collin over 6 years ago

  • Status changed from New to In Progress
Actions #3

Updated by Nathan Cutler over 6 years ago

  • Project changed from Ceph to rgw
Actions #4

Updated by Casey Bodley over 4 years ago

  • Status changed from In Progress to 7
  • Pull request ID set to 30539
Actions #5

Updated by Patrick Donnelly over 4 years ago

  • Status changed from 7 to Fix Under Review
Actions #6

Updated by Casey Bodley about 4 years ago

  • Status changed from Fix Under Review to Pending Backport
  • Backport set to nautilus
Actions #7

Updated by Nathan Cutler about 4 years ago

  • Copied to Backport #43789: nautilus: rgw opslog can not record operation name added
Actions #8

Updated by Nathan Cutler about 4 years ago

  • Status changed from Pending Backport to Resolved

While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".

Actions

Also available in: Atom PDF