rgw: fix opslog operation field as per Amazon s3

According to Amazon s3[1], current Operation field are using
http method, which should be operation name.

[1] http://docs.aws.amazon.com/AmazonS3/latest/dev/LogFormat.html

Fixes: http://tracker.ceph.com/issues/20978

Signed-off-by: Jiaying Ren <jiaying.ren@umcloud.com>